--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8"> 
-	<title> Lucas Martins - Desenvolvedor Web </title>
+
 <link href="css/style.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
@@ -27,9 +26,9 @@
                              <h1> About me</h1>
 <div class="fotoPerfil" > <img src="img/ft_perfil.png"/> </div>
   <h2> Desenvolvedor Web </h2>
-	            <p> Meu nome Ã© Lucas Martins, tenho 19 anos e estou 
-no 3Â° semestre de AnÃ¡lise e Desenvolvimento de Sistemas na Unip de Araraquara. 
-Desde crianÃ§a sou curioso sobre tecnologia e sempre venho de forma autodidata estudar assuntos do meu interesse.
+	            <p> Meu nome é Lucas Martins, tenho 19 anos e estou 
+no 3° semestre de Análise e Desenvolvimento de Sistemas na Unip de Araraquara. 
+Desde criança sou curioso sobre tecnologia e sempre venho de forma autodidata estudar assuntos do meu interesse.
 	           </p>
 	</div>
 
@@ -81,6 +80,14 @@ Desde crianÃ§a sou curioso sobre tecnologia e sempre venho de forma autodidata e
 	           
 	</div>
 </div>
+
+<script>
+
+document.querySelectorAll("h1").style.color = "blue";
+
+
+</script>
+
 
 </body>
 </html>
