--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 
 <title> Lucas Martins - Desenvolvedor Web</title>
+<meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="css/style.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
