--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                              <h1> About me</h1>
 <div class="fotoPerfil" > <img src="img/ft_perfil.png"/> </div>
   <h2> Desenvolvedor Web </h2>
-	            <p> Meu nome é Lucas Martins, tenho 19 anos e estou 
-no 3° semestre de Análise e Desenvolvimento de Sistemas na Unip de Araraquara. 
-Desde criança sou curioso sobre tecnologia e sempre venho de forma autodidata estudar assuntos do meu interesse.
+	            <p> Meu nome e Lucas Martins, tenho 19 anos e estou 
+no 3 semestre de Analise e Desenvolvimento de Sistemas na Unip de Araraquara. 
+Desde crianca sou curioso sobre tecnologia e sempre venho de forma autodidata estudar assuntos do meu interesse.
 	           </p>
 	</div>
 
