--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <head>
      
       <title> Lucas Martins - Desenvolvedor Web</title>
- <meta charset="UTF-8">
+ <meta charset="utf-7">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link href="css/style.css" rel="stylesheet">
       <link href="css/slide.css" rel="stylesheet">
@@ -31,15 +31,15 @@
             <h1> About me</h1>
             <div class="fotoPerfil" > <img src="img/ft_perfil.jpg"/> </div>
             <h2> Desenvolvedor Web </h2>
-            <p> Meu nome Ã© Lucas Martins, tenho 19 anos e estou 
-               no 3Â° semestre de AnÃ¡lise e Desenvolvimento de Sistemas na Unip de Araraquara. 
-               Desde crianÃ§a sou curioso sobre tecnologia e sempre venho de forma autodidata estudar assuntos do meu interesse.
+            <p> Meu nome é Lucas Martins, tenho 19 anos e estou 
+               no 3° semestre de Análise e Desenvolvimento de Sistemas na Unip de Araraquara. 
+               Desde criança sou curioso sobre tecnologia e sempre venho de forma autodidata estudar assuntos do meu interesse.
             </p>
          </div>
 
          <div class="box skills">
             <h1> Skills</h1>
-           <p style="text-align: center"> Algumas habilidades adquiridas por meio da faculdade, tutoriais e com experiÃªncias.</p>
+           <p style="text-align: center"> Algumas habilidades adquiridas por meio da faculdade, tutoriais e com experiências.</p>
             <div class="skill"> 
                <h2 class="skillName"> C# </h2>
                <div class="barra">
@@ -82,26 +82,44 @@
 
 <div class="projects">
 <h1 style="margin-top: 0px; padding-top: 15px;"> Projects </h1>
-<p style="text-align: center;"> Alguns protÃ³tipos de trabalhos da faculdade, sites que fiz pra treino e futuros projetos.</p>
+<p style="text-align: center;"> Alguns protótipos de trabalhos da faculdade, sites que fiz pra treino e futuros projetos.</p>
 <div class="slideshow-container">
 
   <!-- Full-width images with number and caption text -->
   <div class="mySlides fade show">
-    <div class="numbertext">1 / 3</div>
+    <div class="numbertext">1 / 6</div>
     <img src="img/slide-img/login.jpg" style="width:100%">
-    <div class="text" >Projeto da faculdade enfatizando a anÃ¡lise de requisitos e prototipando</div>
+    <div class="text" >Projeto da faculdade enfatizando a análise de requisitos e prototipando</div>
   </div>
 
   <div class="mySlides fade">
-    <div class="numbertext">2 / 3</div>
+    <div class="numbertext">2 / 6</div>
     <img src="img/slide-img/regVeiculo.jpg" style="width:100%">
-     <div class="text" >Projeto da faculdade enfatizando a anÃ¡lise de requisitos e prototipando</div>
+     <div class="text" >Projeto da faculdade enfatizando a análise de requisitos e prototipando</div>
   </div>
 
   <div class="mySlides fade">
-    <div class="numbertext">3 / 3</div>
+    <div class="numbertext">3 / 6</div>
     <img src="img/slide-img/listaVeiculo.jpg" style="width:100%">
-  <div class="text" >Projeto da faculdade enfatizando a anÃ¡lise de requisitos e prototipando</div>
+  <div class="text" >Projeto da faculdade enfatizando a análise de requisitos e prototipando</div>
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">4 / 6</div>
+    <img src="img/slide-img/port_img1.png" style="width:100%">
+  <div class="text" >Site desenvolvido com html, css e javascript</div>
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">5 / 6</div>
+    <img src="img/slide-img/port_img2.png" style="width:100%">
+  <div class="text" >Site desenvolvido com html, css e javascript</div>
+  </div>
+
+<div class="mySlides fade">
+    <div class="numbertext">6 / 6</div>
+    <img src="img/slide-img/port_img3.png" style="width:100%">
+  <div class="text" >Site desenvolvido com html, css e javascript</div>
   </div>
 
   <!-- Next and previous buttons -->
@@ -115,16 +133,28 @@
   <span class="dot" onclick="currentSlide(1)"></span> 
   <span class="dot" onclick="currentSlide(2)"></span> 
   <span class="dot" onclick="currentSlide(3)"></span> 
+<span class="dot" onclick="currentSlide(4)"></span> 
+<span class="dot" onclick="currentSlide(5)"></span> 
+<span class="dot" onclick="currentSlide(6)"></span> 
 </div>
 </div>
 
 
 <div class="contato">
 
+<h1 style="padding-top: 20px;"> Contato  </h1>
+
+<ul class="cnt-c">
+<li> <a class="box-3" id="wpp" href="https://api.whatsapp.com/send?1=pt_BR&phone=55016991471398"> Whatsapp </a> </li>
+<li><a class="box-3" id="wpp" href="https://www.linkedin.com/in/lucas-martins-de-lima/"> Linkedin </a> </li>
+<li> <a class="box-3" id="wpp" href="https://github.com/lucasmartinslima/"> GitHub </a></li>
+</ul>
+
+
 </div>
 
 <footer>
-   <p>2019 Â© Lucas Martins. Todos os direitos reservados. </p>
+   <p>2019 © Lucas Martins. Todos os direitos reservados. </p>
 </footer>
 
       <script></script>
