--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <head>
      
       <title> Lucas Martins - Desenvolvedor Web</title>
- <meta charset="utf-7">
+ <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link href="css/style.css" rel="stylesheet">
       <link href="css/slide.css" rel="stylesheet">
@@ -31,15 +31,15 @@
             <h1> About me</h1>
             <div class="fotoPerfil" > <img src="img/ft_perfil.jpg"/> </div>
             <h2> Desenvolvedor Web </h2>
-            <p> Meu nome é Lucas Martins, tenho 19 anos e estou 
-               no 3° semestre de Análise e Desenvolvimento de Sistemas na Unip de Araraquara. 
-               Desde criança sou curioso sobre tecnologia e sempre venho de forma autodidata estudar assuntos do meu interesse.
+            <p> Meu nome Ã© Lucas Martins, tenho 19 anos e estou 
+               no 3Â° semestre de AnÃ¡lise e Desenvolvimento de Sistemas na Unip de Araraquara. 
+               Desde crianÃ§a sou curioso sobre tecnologia e sempre venho de forma autodidata estudar assuntos do meu interesse.
             </p>
          </div>
 
          <div class="box skills">
             <h1> Skills</h1>
-           <p style="text-align: center"> Algumas habilidades adquiridas por meio da faculdade, tutoriais e com experiências.</p>
+           <p style="text-align: center"> Algumas habilidades adquiridas por meio da faculdade, tutoriais e com experiÃªncias.</p>
             <div class="skill"> 
                <h2 class="skillName"> C# </h2>
                <div class="barra">
@@ -82,26 +82,26 @@
 
 <div class="projects">
 <h1 style="margin-top: 0px; padding-top: 15px;"> Projects </h1>
-<p style="text-align: center;"> Alguns protótipos de trabalhos da faculdade, sites que fiz pra treino e futuros projetos.</p>
+<p style="text-align: center;"> Alguns protÃ³tipos de trabalhos da faculdade, sites que fiz pra treino e futuros projetos.</p>
 <div class="slideshow-container">
 
   <!-- Full-width images with number and caption text -->
   <div class="mySlides fade show">
     <div class="numbertext">1 / 6</div>
     <img src="img/slide-img/login.jpg" style="width:100%">
-    <div class="text" >Projeto da faculdade enfatizando a análise de requisitos e prototipando</div>
+    <div class="text" >Projeto da faculdade enfatizando a anÃ¡lise de requisitos e prototipando</div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">2 / 6</div>
     <img src="img/slide-img/regVeiculo.jpg" style="width:100%">
-     <div class="text" >Projeto da faculdade enfatizando a análise de requisitos e prototipando</div>
+     <div class="text" >Projeto da faculdade enfatizando a anÃ¡lise de requisitos e prototipando</div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">3 / 6</div>
     <img src="img/slide-img/listaVeiculo.jpg" style="width:100%">
-  <div class="text" >Projeto da faculdade enfatizando a análise de requisitos e prototipando</div>
+  <div class="text" >Projeto da faculdade enfatizando a anÃ¡lise de requisitos e prototipando</div>
   </div>
 
   <div class="mySlides fade">
@@ -154,7 +154,7 @@
 </div>
 
 <footer>
-   <p>2019 © Lucas Martins. Todos os direitos reservados. </p>
+   <p>2019 Â© Lucas Martins. Todos os direitos reservados. </p>
 </footer>
 
       <script></script>
